@@ -10,6 +10,7 @@ PoorWSGI>=2.3.2
 pydantic
 pyserial
 python-daemon
+python-prctl
 PyYAML
 requests
 setuptools
